# Bitcoin_Sprint_Production

./: .env.business  .env.enterprise  .env.free  .env.networks  .env.pro  .env.rust  .env.turbo  .gitattributes  .gitignore  API.md  API_PERFORMANCE_REPORT.md  ARCHITECTURE.md  BUILD-SUMMARY.ps1  BUILD_PROGRESS_TRACKER.md  CICD_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  CONFIG_README.md  DEVELOPMENT_README.md  DOCKER_OPTIMIZATION_README.md  Dockerfile  Dockerfile.solana-exporter  ENTERPRISE_PERFORMANCE_GUIDE.md  ENTROPY_ADMIN_AUTH_README.md  ENTROPY_BRIDGE_MONITORING_README.md  ENTROPY_FFI_INTEGRATION_COMPLETE.md  ENTROPY_INTEGRATION_COMPLETE.md  ENTROPY_MONITOR_README.md  ENTROPY_STATUS_REPORT.md  FLY_IO_DEPLOYMENT_README.md  GRAFANA_SETUP_ALTERNATIVES.md  HTTP_CONNECTION_FIX.md  Install-Service.vbs  Install-Verbose.cmd  LIVE_BITCOIN_STATUS.md  Makefile  Makefile.win  QUICKSTART.md  QUICK_RPC_FIX.md  README.md  README_METRICS.md  (+232 more)
.github/workflows/: ci.yml  windows-cgo.yml
Bitcoin_Sprint_Cleaned_Backup_20250905_165817/: BACKUP_MANIFEST.md  CICD_IMPLEMENTATION_SUMMARY.md  CICD_STRATEGY.md  FAST_SYNC_README.md  PORT_MAPPING_GUIDE.md  README.md  RESTORE.ps1
Bitcoin_Sprint_Cleaned_Backup_20250905_165817/config/: docker-compose-test.yml  ethereum-peers.yml
Bitcoin_Sprint_Cleaned_Backup_20250905_165817/monitoring/: README.md
Bitcoin_Sprint_fastapi/fastapi-gateway/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  start-fastapi.ps1
_cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BitcoinSprint.sln  CMakeCache.txt  SecureBufferRust.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rust_build.vcxproj  rust_build.vcxproj.filters
abstraction/: demo.go
acceleration/: demo.go
bitcoin-sprint-package/: DEPLOYMENT_GUIDE.md  VERSION.json  install.ps1
bitcoin-sprint-package/config/: bitcoin.conf
bitcoin-sprint-package/docs/: ARCHITECTURE.md  LICENSE  README.md
bitcoin-sprint-package/scripts/: start-sprint-optimized.ps1
bitcoin-sprint-selfcontained/: README.md  start.bat  start.ps1
bitcoin-sprint-selfcontained/config/: bitcoin-testnet.conf
cmd/: README.md  go.mod  install.ps1  main.go  main_test.go
cmd/cb-chaos/: main.go
cmd/cb-loadtest/: main.go
cmd/cb-monitor/: main.go
cmd/debug-check/: main.go
cmd/latency-test/: main.go
cmd/runtime-demo/: quick-test.go  runtime-integration-test.go
cmd/selfcheck/: main.go  package-lock.json
cmd/sprint/: .env.example  CONFIG.md  config-pure.json  config-test-api.json  config-test.json  config.json  go.mod  main.go  test-json.go
cmd/sprintd/: main.go  p2p_diag.go
cmd/testsecure/: main.go
config/: Dockerfile.bitcoin-exporter  Dockerfile.solana-exporter  bitcoin-lightning.conf  bitcoin-sprint-api.yaml  docker-compose.yml  enterprise-api-config.json  enterprise-service.toml  prometheus.yml  requirements.txt  service-config.toml  solana-exporter.py
config/nginx/: nginx.conf
contracts/ethereum/: BitcoinSprintEntropy.sol
data/: api_keys.json  api_performance_report_enterprise_20250828_024117.json  current_dashboard.json  dashboard_backup.json
db/: init-database.ps1  init-db.sql
demo/: acceleration_layer_demo.go  sprint_acceleration_demo.go  sprint_value_demo.go
docs/: COMPREHENSIVE_CLEANUP_ANALYSIS.md  FASTAPI_README.md  MAINTENANCE_SYSTEM.md  SECURECHANNEL_API.md
docs/architecture/: SPRINT_ARCHITECTURE_CORRECTED.md  SPRINT_VALUE_DELIVERY.md
examples/: enterprise_api_demo.go  enterprise_demo.go  enterprise_demo_simple.go  securebuffer_integration.go  sprint_value_demo.go
examples/cpp/: CMakeLists.txt  main.cpp
examples/securechannel/: api_check.go  api_test.go  bitcoin_sprint_integration.go  main.go
fly/: README.md  deploy.sh
fly/fastapi/: Dockerfile  requirements.txt  start.sh
fly/grafana/: Dockerfile  fly.toml
grafana-config/dashboards/: bitcoin-sprint.json
grafana/dashboards/: api-testing-dashboard-new.json  api-testing-dashboard.json  enterprise-performance-dashboard.json  grafana-dashboard-entropy-bridge.json  solana-monitoring.json  (+2 more)
monitoring/: alerts.yml
performance-test-results/: api-performance-simple-20250827-150145.json  api-performance-summary-20250827-150145.txt
runtime/: turbo_validator.rs
secure/rust/: Cargo.toml  GO_INTEGRATION.go  IMPROVEMENTS.md  PROFESSIONAL_API_IMPLEMENTATION.md  TEST_REPORT.md  sample_enhanced_status.json  sample_health_status.json  sample_pool_status.json  securebuffer.h  syntax_check.rs  validate_json_samples.go
secure/rust/examples/: main_patterns.rs  pool_demo.rs
secure/rust/include/: securebuffer.h
secure/rust/src/: bloom_filter.rs  entropy.rs  lib.rs  secure_channel_improved.rs  securebuffer.rs  storage_verifier.rs  web_server.rs
secure/rust/tests/: axum_smoke.rs
simple_api/: Cargo.toml
sprintclient/: client.go  client_test.go
technical/: mathematical_advantages.go
tests/: README.md  enterprise-api-test-fixed.ps1  enterprise-api-test.ps1  grafana-enterprise-validation.ps1  grafana-validation-final.ps1  production_readiness_test.go  test-entropy-proxy.go  test_config.go  test_integration.go  test_tier_enforcement.go  turbo-mode-stress-test.ps1
tools/: blockchain-network-diagnostics.go  dev-win.ps1  http-connection-tester.go  network-diagnostics.go  npx.ps1  relay-connection-tester.go  simple-api.go  test-cache-basic.go  test-enterprise-cache.go  test-entropy-performance.go  test-migrations.go  test-server.go  test_headers.go  test_version.go  test_version_handler.go
web/: .env.local  API_DOCUMENTATION.md  dashboard.html  examples.js  live-dashboard.html  merkle-utils.js  middleware.ts  next.config.cjs  next.config.js  next.config.mjs  package-lock.json  package.json  rust-entropy-bridge.js  test-api-verification.js  test-brand-colors.js  test-connection.js  test-dark-theme.js  test-entropy-monitor-standalone.js  test-entropy-monitor.js  test-entropy-simple.js  test-entropy-web-api.js  test-key-generation.js  test-server.js  test-signup.js  test-storage-integration.js  tsconfig.json  tsconfig.tsbuildinfo  turbo-dashboard.html  world-class-dashboard.html
(+283 files in other folders)
