[package]
name = "securebuffer"
version = "0.1.0"
edition = "2021"

[lib]
name = "securebuffer"
crate-type = ["cdylib", "staticlib"]

[dependencies]
zeroize = "1.8"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
libc = "0.2"

# Networking and TLS
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-native-certs = "0.8"

# HTTP and metrics
hyper = { version = "1.0", features = ["full"] }
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
url = "2.5"
async-trait = "0.1"
backoff = "0.4"
tokio-metrics = "0.3"
hdrhistogram = "7.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winbase"] }
