[package]
name = "securebuffer"
version = "0.1.0"
edition = "2021"

[lib]
name = "securebuffer"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
libc = "0.2"
sysinfo = "0.30"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }

# Optional IPFS support
reqwest = { version = "0.12", optional = true }
log = "0.4"
env_logger = "0.10"

# Bitcoin integration
bitcoin = "0.32"
bitcoin_hashes = "0.14"

# High-performance data structures
dashmap = "6.1"
rayon = "1.10"

# Networking and TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-native-certs = "0.8"

# HTTP and metrics
hyper = { version = "1.0", features = ["full"] }
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server dependencies
actix-web = { version = "4.4", optional = true }
actix-rt = { version = "2.9", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
futures = { version = "0.3", optional = true }
tokio-metrics = "0.3"
hdrhistogram = "7.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
ipfs = ["reqwest"]
web-server = ["actix-web", "actix-rt", "uuid", "futures"]

[[bin]]
name = "storage_demo"
path = "../../storage_verification_demo.rs"
required-features = ["ipfs"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winbase", "wincrypt"] }
